--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "@umijs/preset-react": "1.x",
     "@umijs/test": "^3.2.28",
     "antd": "^4.8.5",
+    "dayjs": "^1.9.6",
     "lint-staged": "^10.0.7",
-    "moment": "^2.29.1",
     "prettier": "^1.19.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
