chore: modify branch

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,9 +42,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # 之前GitHub添加的Token
         with:
+          commitish: 'gh-pages'
           tag_name: ${{ github.ref }} # (tag)标签名称
           release_name: Release ${{ github.ref }}
           draft: false # 是否是草稿
           prerelease: false # 是否是预发布
-          commitish: gh-pages
-          
