--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -17,9 +17,9 @@ jobs:
       
       - name: Out Version ID
         env:
-          VERSION_ID: "${{ steps.get-version-id.outputs.version-id }}"
+          VERSION_ID: ${{ steps.get-version-id.outputs.version-id }}
         run: |
-          echo "$VERSION_ID"
+          echo $VERSION_ID
 
       - name: Checkout
         uses: actions/checkout@v2.3.1 # If you're using actions/checkout@v2 you must set persist-credentials to false in most cases for the deployment to work correctly.
