--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -25,6 +25,7 @@ jobs:
         run: |
           VERSION_ID=$(cat package.json | grep version | sed 's|  \"\version": \"||g' | sed 's|\",||g')
           echo "::set-output name=version-id::$(echo $VERSION_ID)"
+          echo $VERSION_ID
       
       - name: Out Version ID
         env:
