chore: fix version_id

--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Get Version ID
         id: get-version-id
         run: |
-          VERSION_ID=$(cat package.json | grep version | sed 's|  \"\version": \"||g' | sed 's|\",||g')
+          VERSION_ID=$(cat package.json | grep version | sed 's|  \"version\": \"||g' | sed 's|\",||g')
           echo "::set-output name=version-id::$(echo $VERSION_ID)"
           echo $VERSION_ID
       
