--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -29,8 +29,9 @@ jobs:
 
       - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
         env:
-          VERSION: v0.0.1
+          VERSION_ID: ${{ steps.get-version-id.outputs.version-id }}
         run: |
+          sed -i "s|publicPath: \'\/\'|publicPath: \'\/\/cdn\.jsdelivr\.net\/gh\/XCPCIO\/Codeforces-Analyze@${{ env.VERSION_ID }}\/\'|" .umirc.ts
           npm install
           npm run build
           mkdir site
