--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "lint-staged": "^10.0.7",
     "prettier": "^1.19.1",
     "react": "^16.12.0",
+    "react-calendar-heatmap": "^1.8.1",
     "react-dom": "^16.12.0",
     "react-highlight-words": "^0.16.0",
+    "react-tooltip": "^4.2.11",
     "umi": "^3.2.28",
     "yorkie": "^2.0.0"
   }
