--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "v0.0.13",
+  "version": "v0.0.14",
   "private": true,
   "scripts": {
     "start": "umi dev",
@@ -26,6 +26,8 @@
     "@umijs/test": "^3.2.28",
     "antd": "^4.8.5",
     "dayjs": "^1.9.6",
+    "highcharts": "^8.2.2",
+    "highcharts-react-official": "^3.0.0",
     "lint-staged": "^10.0.7",
     "prettier": "^1.19.1",
     "react": "^16.12.0",
