--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -31,7 +31,8 @@ jobs:
         env:
           VERSION_ID: ${{ steps.get-version-id.outputs.version-id }}
         run: |
-          sed -i "s|publicPath: '/'|publicPath: '//cdn.jsdelivr.net/gh/XCPCIO/Codeforces-Analyze@${{ env.VERSION_ID }}/'|" .umirc.ts
+          sed -i "s|publicPath: '/'|publicPath: '//cdn.jsdelivr.net/gh/XCPCIO/Codeforces-Analytics@${{ env.VERSION_ID }}/'|" .umirc.ts
+          sed -i "s|favicon: 'favicon-16x16.png'|favicon: '//cdn.jsdelivr.net/gh/XCPCIO/Codeforces-Analytics@${{ env.VERSION_ID }}/favicon-16x16.png'|" .umirc.ts
           cat .umirc.ts
           npm install
           npm run build
